Fix alignment for 'Add new server' button

--- a/src/browser/css/components/TabBar.css
+++ b/src/browser/css/components/TabBar.css
@@ -10,13 +10,18 @@
   padding: 0 15px;
 }
 
-.TabBar .AddServerButton>a {
+.TabBar .TabBar-addServerButton>a {
   border: none;
   background: transparent;
-  margin: 0px;
-  margin-left: 1px; /*Has no border and would be placed above the last item's border due to it's margin-right: -1px */
-  padding: 0;
-  margin-bottom: 1px;
+  color: #999;
+  font-size: 10px;
+  line-height: 31px;
+}
+
+.TabBar .TabBar-addServerButton>a:hover {
+  color: #333;
+  background-color: #e6e6e6;
+  border-color: #adadad;
 }
 
 .TabBar .TabBar-badge {
@@ -32,30 +37,3 @@
   margin-top: 5px;
   border-radius: 50%;
 };
-
-
-.TabBar .AddServerButton-button {
-  background-color: #fff;
-  border-color: #ccc;
-  color: #333;
-  margin-top: 3px;
-}
-
-.TabBar .AddServerButton-button {
-  border: none;
-  font-size: 20px;
-  height: 31px;
-  padding: 2px 0 0 0;
-  width: 40px;
-  color: #999;
-  font-weight: bold;
-  margin: 0;
-  border-radius: 2px 2px 0 0;
-  outline: none;
-}
-
-.TabBar .AddServerButton-button:hover {
-  color: #333;
-  background-color: #e6e6e6;
-  border-color: #adadad;
-}
